   writing the tesselation control shader.
   4) New vertex primitive type GL.PATCHES
 ! Renamed SetShaderParameter to SetGeometryShaderParameter to avoid confusion of what kind shader parameters belongs to.
 - Added VFS.GetLoadedArchives() -> { string archiveName1, string archiveName2 ... }
 - Added VFS.GetArchivePath(string archiveName1) -> string archivePathOnDisk


AI:
 - reveal unit's captureProgress, buildProgress and paralyzeDamage params through
   skirmishAiCallback_Unit_get{CaptureProgress,BuildProgress,ParalyzeDamage} functions

Misc:
 - remove joystick support
 - detect hangs during filesystem initialisation
 - fix stale thread-id cache in watchdog after reload
 - make LuaVFSDownload rescan archives in main thread, and do so when a download finishes (not when one starts)
 - account for raw search in AICallback::GetPathLength
 - use hidden window for offscreen context rendering
 - add /{more,less}grass and /drawgrass commands
 - remove Basic{Sky,Water,TreeDrawer} (3DTrees is now always 1)
 - remove /DynamicSky command and keybinding
 - remove /{More,Less}Clouds commands
 - remove 3DTrees config-setting
 - remove /adv{map,model}shading commands
 - remove Adv{Map,Unit}Shading config-settings
 - remove ForceDisableShaders config-setting
 - remove Use{V,P}BO config-settings
 - remove LuaShaders config-setting
 - remove legacy InfoTexHandler
 - mandate GLSL support
 - throw out legacy load-screen code (replaced by LuaIntro)
 - change PitchAdjust config-setting from a boolean to an integer
   0 disables, 1 scales pitch by the square root of game speed, 2
   scales linearly with game speed
 - `/nocost` now accepts 0/1 parameter (still toggles if none given)
 - model metadata for assimp/obj can now define pieces hierarchy
   by either nested tables or 'parent' key.
 - IME editing support for those with the proper SDL2 version/IME tool combination

Fixes:
 - fix infinite backtracking loop in PFS